[gd_scene load_steps=2 format=3 uid="uid://bpmjojbki3elu"]

[ext_resource type="Script" path="res://save_load_json.gd" id="1_2e3lt"]

[node name="SaveLoadJSON" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2e3lt")
metadata/_edit_lock_ = true

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Buttons" type="VBoxContainer" parent="HBox"]
layout_mode = 2
alignment = 1

[node name="Save" type="Button" parent="HBox/Buttons"]
layout_mode = 2
text = "Save"

[node name="Load" type="Button" parent="HBox/Buttons"]
layout_mode = 2
text = "Load"

[node name="Data" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="LineEdit0" type="LineEdit" parent="HBox/Data"]
layout_mode = 2
text = "This is the first LineEdit."

[node name="LineEdit1" type="LineEdit" parent="HBox/Data"]
layout_mode = 2
text = "This is the second LineEdit."

[node name="LineEdit2" type="LineEdit" parent="HBox/Data"]
layout_mode = 2
text = "This is the third LineEdit."

[connection signal="pressed" from="HBox/Buttons/Save" to="." method="save_json"]
[connection signal="pressed" from="HBox/Buttons/Load" to="." method="load_json"]
